k8s/chthon-mc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chthon-mc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chthon-mc
  template:
    metadata:
      labels:
        app: chthon-mc
    spec:
      nodeSelector:
        kubernetes.io/hostname: chthon-srv-0
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: minecraft
          image: ghcr.io/drewrjensen/chthon-mc:${MC_VERSION}-${CMC_VERSION}
          ports:
            - containerPort: 8080 # Dynmap
            - containerPort: 8804 # Plan
            - containerPort: 19132 # Geyser UDP
            - containerPort: 19133 # Geyser UDP
            - containerPort: 24454 # MC Voice UDP
            - containerPort: 25565 # Java Edition
          volumeMounts:
            - name: host-worlds
              mountPath: /srv/papermc/worlds
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "8Gi"
              cpu: "2"
      volumes:
        - name: host-worlds
          hostPath:
            path: /opt/minecraft/worlds
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: chthon-mc
spec:
  type: NodePort
  selector:
    app: chthon-mc
  ports:
    - name: geyser-udp-19132
      port: 19132
      targetPort: 19132
      nodePort: 30132
      protocol: UDP
    - name: geyser-udp-19133
      port: 19133
      targetPort: 19133
      nodePort: 30133
      protocol: UDP
    - name: mcvoice-udp-24454
      port: 24454
      targetPort: 24454
      nodePort: 30454
      protocol: UDP
    - name: java
      port: 25565
      targetPort: 25565
      nodePort: 30065
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: chthon-mc-web
spec:
  selector:
    app: chthon-mc
  ports:
    - name: dynmap
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: plan
      port: 8804
      targetPort: 8804
      protocol: TCP
