k8s/chthon-mc-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chthon-mc-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: "(Host(`mc.chthon.xyz`) || Host(`10.0.0.254`)) && PathPrefix(`/stats`)"
      kind: Rule
      services:
        - name: chthon-mc-web
          port: 8804
    - match: "Host(`mc.chthon.xyz`) || Host(`10.0.0.254`)"
      kind: Rule
      services:
        - name: chthon-mc-web
          port: 8080
